# 3l-cvrp-heuristic

./: .gitignore
cpp/3L-VehicleRouting/: CMakeLists.txt
cpp/3L-VehicleRouting/3L-VehicleRoutingApplication/: CMakeLists.txt
cpp/3L-VehicleRouting/3L-VehicleRoutingApplication/src/: 3L-VehicleRoutingApplication.cpp
cpp/3L-VehicleRouting/CommonBasics/: CMakeLists.txt
cpp/3L-VehicleRouting/ContainerLoading/: CMakeLists.txt
cpp/3L-VehicleRouting/ContainerLoading/include/ContainerLoading/: Classifier.h  LoadingChecker.h  MLModelsContainer.h  ProblemParameters.h
cpp/3L-VehicleRouting/ContainerLoading/src/: Classifier.cpp  LoadingChecker.cpp  MLModelsContainer.cpp
cpp/3L-VehicleRouting/ContainerLoading/src/LoadingChecker/: BaseLoadingChecker.cpp  Classifier.cpp  FilterLoadingChecker.cpp  HybridLoadingChecker.cpp  NoClassifierLoadingChecker.cpp  SpeedUpLoadingChecker.cpp
cpp/3L-VehicleRouting/VehicleRouting/: CMakeLists.txt
cpp/3L-VehicleRouting/VehicleRouting/src/Algorithms/: Constructive.cpp  IteratedLocalSearch.cpp
cpp/3L-VehicleRouting/VehicleRouting/src/Helper/: Serialization.cpp
cpp/3L-VehicleRouting/VehicleRouting/src/Improvement/: DeleteEmptyRoutes.cpp  FullEnumerationSearch.cpp  Insertion.cpp  InterInsertion.cpp  InterLocalSearchOperator.cpp  InterSwap.cpp  IntraInsertion.cpp  IntraLocalSearchOperator.cpp  IntraSwap.cpp  K_RandomInsertions.cpp  K_RandomSwaps.cpp  LocalSearch.cpp  PerturbationOperatorBase.cpp  TwoOpt.cpp
cpp/3L-VehicleRouting/VehicleRouting/src/Model/: Instance.cpp
data/input/3l-cvrp/gendreau/: E016-03m.json  E016-05m.json  E021-04m.json  E021-06m.json  E022-04g.json  E022-06m.json  E023-03g.json  E023-05s.json  E026-08m.json  E030-03g.json  E030-04s.json  E031-09h.json  E033-03n.json  E033-04g.json  E033-05s.json  E036-11h.json  E041-14h.json  E045-04f.json  E051-05e.json  E072-04f.json  E076-07s.json  E076-08s.json  E076-10e.json  E076-14s.json  E101-08e.json  E101-10c.json  E101-14s.json
data/input/3l-cvrp/parameters/: BenchmarkParameters_AllConstraints.json  BenchmarkParameters_AllConstraints_Filter.json  BenchmarkParameters_AllConstraints_Hybrid.json  BenchmarkParameters_AllConstraints_NoClassifier.json  BenchmarkParameters_AllConstraints_Run2.json  BenchmarkParameters_AllConstraints_Run3.json  BenchmarkParameters_AllConstraints_Test.json  BenchmarkParameters_AllConstraionts_Test.json  Parameters_Filter_AllConstraints.json  Parameters_Hybrid_AllConstraints.json  Parameters_NoClassifier_AllConstraints.json  Parameters_SpeedUp_AllConstraints.json
data/input/model/: mlp_cp_status_model_traced.pt  mlp_input_scaling.json
data/input/model/Gendreau_14440_inf_1_1/: _mlp_cp_status_model_traced.pt  _mlp_input_scaling.json  mb_complete_mlp_cp_status_model_traced.pt  mb_complete_mlp_input_scaling.json  mb_complete_nodupl_mlp_cp_status_model_traced.pt  mb_complete_nodupl_mlp_input_scaling.json  mb_complete_nodupl_nosigmoid_mlp_cp_status_model_traced.pt  mb_complete_nodupl_nosigmoid_mlp_input_scaling.json  mb_complete_nodupl_shrink094_mlp_cp_status_model_traced.pt  mb_complete_nodupl_shrink094_mlp_input_scaling.json  mb_complete_nodupl_shrink095_mlp_cp_status_model_traced.pt  mb_complete_nodupl_shrink095_mlp_input_scaling.json  mb_complete_nodupl_trimmed_mlp_cp_status_model_traced.pt  mb_complete_trimmed_mlp_cp_status_model_traced.pt  mb_complete_trimmed_mlp_input_scaling.json
data/input/model/Gendreau_14440_inf_1_1_WithNoItems/: _mlp_cp_status_model_traced.pt  mb_mlp_cp_status_model_traced.pt  mb_mlp_input_scaling.json
data/input/model/Gendreau_Rand_Tours/: _mlp_cp_status_model_traced.pt  _mlp_input_scaling.json  mb_complete_mlp_cp_status_model_traced.pt  mb_complete_mlp_input_scaling.json  mb_complete_nodupl_mlp_cp_status_model_traced.pt  mb_complete_nodupl_mlp_input_scaling.json
data/input/model/Old_Gendreau28880/: mlp_cp_status_model_traced.pt  mlp_input_scaling.json
data/output/3l-cvrp/all-constraints-heuristic-basic/2025-07-28_16-28-31/: Solution-E016-03m.json  SolutionStatistics-E016-03m.json
data/output/3l-cvrp/all-constraints-heuristic-basic/2025-07-28_16-38-42/: Solution-E016-03m.json  Solution-E016-05m.json
data/output/3l-cvrp/all-constraints-heuristic-basic/2025-07-28_16-48-49/: Solution-E016-05m.json
data/output/3l-cvrp/all-constraints-heuristic-basic/2025-07-28_16-48-50/: Solution-E016-03m.json  SolutionStatistics-E016-03m.json
data/output/3l-cvrp/all-constraints-heuristic-basic/2025-07-28_16-58-57/: Solution-E021-04m.json  SolutionStatistics-E021-04m.json
data/output/3l-cvrp/all-constraints-heuristic-basic/2025-07-28_16-58-58/: Solution-E021-06m.json  SolutionStatistics-E021-06m.json
data/output/3l-cvrp/all-constraints-heuristic-basic/2025-07-28_17-09-05/: Solution-E021-04m.json  Solution-E021-06m.json  SolutionStatistics-E021-04m.json  SolutionStatistics-E021-06m.json
data/output/3l-cvrp/all-constraints-heuristic-basic/2025-07-28_17-19-12/: Solution-E021-06m.json  SolutionStatistics-E021-06m.json  StartSolution-E021-06m.json
data/output/3l-cvrp/all-constraints-heuristic-basic/2025-07-28_17-19-14/: Solution-E021-04m.json  SolutionStatistics-E021-04m.json
data/output/3l-cvrp/all-constraints-heuristic-basic/2025-07-28_17-29-20/: Solution-E022-04g.json  SolutionStatistics-E022-04g.json
python/: start_cvrp_with_python.py
python/visualization/: SolutionVisualizer.py  StatisticAnalyzer.py
(+779 files in other folders)
